bin/LumusGrammar.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{
  ignore_case = true;  static = true;}PARSER_BEGIN(Lumus)
public class Lumus{  public static void main(String args []) throws ParseException  {
	
	try {
	  Lumus parser;
	boolean valid = true;

	java.util.HashMap<String,Municipality> map = new java.util.HashMap<String,Municipality>();
	//either read from file or console
	if (args.length == 0) {
	   parser = new Lumus(System.in);
	}
	else {
	  parser = new Lumus(new java.io.FileInputStream(args[0]));
	}

	System.out.println("Lumus Scanner:");
	while(valid) {
		valid = parser.readLine(map);
	}
	System.out.println("\nTerminating Lumus Scanner...");
	}
    catch(Throwable e) {
      System.err.println(e.getMessage());
    }
  }}PARSER_END(Lumus)SKIP :{"\r"| "\t"| "\n"}
TOKEN : 
{
  < TERMINATE : "end" >
| < OPTION : <WATER> | <POWER> >
| < AVAILABILITY : <YES> | <NO> >
| < #WATER : "water" >
| < #POWER : "power" >
| < #YES : "yes" >
| < #NO : "no" >
| < ID : ["a"-"z","A"-"Z","_"](["a"-"z","A"-"Z","_","0"-"9"])* >
| < NAME : "\""(["a"-"z"] | ["A"-"Z"] | " ")+"\"" >
}
boolean readLine(java.util.HashMap map) :
{}
{
  <TERMINATE> { return false; }
| <EOF> { return false; }
| command(map) { return true; }
}

void command(java.util.HashMap map) :
{ Token identifier=null, mun=null, sec=null, op=null, avail=null, op2=null;}
{
  "municipality "identifier=<ID>(" ")?"="(" ")?mun=<NAME>
  {
    map.put(identifier.image, new Municipality(mun.image));
  }
| "report("(" ")?identifier=<ID>","(" ")?sec=<NAME>","(" ")?op=<OPTION>","(" ")?avail=<AVAILABILITY>(" ")?")"
  {
	Municipality temp = (Municipality)map.get(identifier.image);
	if(temp == null) {
	  System.err.println("Municipality "+identifier.image+" does not exist");
	}
	else {
	  boolean check = false;
	  if(avail.image.equals("yes"))
	  	check = true;
	  else
	  	check = false;
	  temp.report(sec.image,op.image,check);
	  map.put(identifier.image,temp);
	}
  }
  | "analyze("(" ")?identifier=<ID>(" ")?","(" ")?op=<OPTION>((" ")?","(" ")?op2=<OPTION>)?(" ")?")"
	{
	  	Municipality temp2= (Municipality)map.get(identifier.image);
		if(temp2 == null) {
		  System.err.println("Municipality "+identifier.image+" does not exist");
		}
		else {
		  if(op2 != null)
		  	temp2.analyze(op.image,op2.image);
		  else
		  temp2.analyze(op.image);
		}
	}
}

